fix: scale text and page padding on smaller screens
- Not certain on the particular implementation of this, but it seems good
  so far.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,14 @@
     --color-link-hover: var(--color-sky);
 
     background: var(--color-base);
+
+    --font-size-base: 1.5rem;
+}
+
+@media screen and (width < 25rem) {
+    :root {
+        --font-size-base: 1.25rem;
+    }
 }
 
 *,
@@ -53,7 +61,7 @@
 body {
     font-family: "IBM Plex Sans", sans-serif;
     /* Default 24px */
-    font-size: 1.5rem;
+    font-size: var(--font-size-base);
     font-weight: 400;
     line-height: 1.4;
 
@@ -131,7 +139,7 @@ menu {
 
 .font-big {
     /* Default 36px */
-    font-size: 2.25rem;
+    font-size: calc(var(--font-size-base) * 1.5);
     font-weight: 600;
 }
 
@@ -143,7 +151,7 @@ menu {
 small {
     font-family: "IBM Plex Mono", monospace;
     /* Default 16px */
-    font-size: 1rem;
+    font-size: var(--font-size-base) * (2 / 3);
     font-weight: 400;
 }
 
@@ -160,37 +168,37 @@ blockquote {
 
 h1 {
     /* Default 72px */
-    font-size: 4.5rem;
+    font-size: calc(var(--font-size-base) * 3);
     font-weight: 700;
 }
 
 h2 {
     /* Default 60px */
-    font-size: 3.75rem;
+    font-size: calc(var(--font-size-base) * 2.5);
     font-weight: 700;
 }
 
 h3 {
     /* Default 48px */
-    font-size: 3rem;
+    font-size: calc(var(--font-size-base) * 2);
     font-weight: 600;
 }
 
 h4 {
     /* Default 36px */
-    font-size: 2.25rem;
+    font-size: calc(var(--font-size-base) * 1.5);
     font-weight: 600;
 }
 
 h5 {
     /* Default 32px */
-    font-size: 2rem;
+    font-size: var(--font-size-base) * (4 / 3);
     font-weight: 600;
 }
 
 h6 {
     /* Default 32px */
-    font-size: 2rem;
+    font-size: var(--font-size-base) * (4 / 3);
     font-weight: 500;
 }
 
